<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    android:focusable="true">

    <ImageView android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/profile"/>
    <LinearLayout
        android:id="@+id/rl_playlist"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/playlist"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/playlist"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="75dp"
        android:src="#FFFFFF" />
    <LinearLayout
    android:id="@+id/rl_channel"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginTop="15dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"

    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/channel"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/channel"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />
</LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="75dp"
        android:src="#FFFFFF" />
    <LinearLayout
        android:id="@+id/rl_About"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/about_us"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/aboutus"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="75dp"
        android:src="#FFFFFF" />

    <LinearLayout
        android:id="@+id/ll_more"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/more"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/moreapp"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="75dp"
        android:src="#FFFFFF" />
    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/share"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/share"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="75dp"
        android:src="#FFFFFF" />
    <LinearLayout
        android:id="@+id/rl_exit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/logout"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="75dp"
        android:src="#FFFFFF" />


</LinearLayout>